@@ -22,7 +22,7 @@ if (clang_versions.length == 0) {
 }
 def clang_version = clang_versions[0]
 
-def jextract_version = "21"
+def jextract_version = "22"
 def jmods_dir = "$buildDir/jmods"
 def jextract_jmod_file = "$jmods_dir/org.openjdk.jextract.jmod"
 def jextract_jmod_libs_dir = "$buildDir/jextract_jmod_libs"
@@ -41,7 +41,6 @@ repositories {
 
 compileJava {
     options.release = 22
-    options.compilerArgs << "--enable-preview"
     options.fork = true
     options.forkOptions.executable = "${jdk22_home}/bin/javac"
 }
@@ -102,8 +101,8 @@ task createJextractImage(type: Exec) {
     outputs.dir(jextract_app_dir)
 
     def quote_jlink_opts = Os.isFamily(Os.FAMILY_WINDOWS)?
-        '\\"--enable-native-access=org.openjdk.jextract\\" \\"--enable-preview\""' :
-        '"--enable-native-access=org.openjdk.jextract" "--enable-preview"'
+        '\\"--enable-native-access=org.openjdk.jextract\\"' :
+        '"--enable-native-access=org.openjdk.jextract"'
 
     doFirst {
         delete(jextract_app_dir)
@@ -192,7 +191,6 @@ task jtreg(type: JavaExec) {
     args = [
             "-jdk", "$buildDir/jextract-jdk-test-image",
             "-nativepath:$buildDir/testlib-install/${os_lib_dir}",
-            "-javaoption:--enable-preview",
             "-javaoption:--enable-native-access=org.openjdk.jextract,ALL-UNNAMED",
             "-avm", "-conc:auto", "-verbose:summary",
             "../test"
